# vis5d-tools

./: README
ARWpost/: README  fields.plt
ARWpost/2.2/: clean  compile  gribinfo.txt  myLIST
ARWpost/2.2/arch/: postamble  preamble
ARWpost/2.2/src/: .process_domain_module.F90.swp  Makefile  gridinfo_module.F90  module_basic_arrays.f90  module_calc_clfr.f90  module_calc_pressure.f90  module_calc_rh2.f90  module_calc_slp.f90  module_calc_tc.f90  module_calc_td2.f90  module_calc_theta.f90  module_calc_tk.f90  module_calc_uvmet.f90  module_calc_wdir.f90  module_diagnostics.f90  module_get_file_names.F90  module_model_basics.f90  module_pressure.f90_orig  process_domain_module.F90
ARWpost/2.2/util/: make_gribinfo.f
ARWpost/arch/: Config.pl  configure.defaults
ARWpost/scripts/: plot_all.gs
ARWpost/src/: .module_calc_cape.f90.swp  ARWpost.f90  constants_module.f90  input_module.F90  misc_definitions_module.f90  module_arrays.f90  module_calc_cape.f90  module_calc_dbz.f90  module_calc_height.f90  module_calc_rh.f90  module_calc_td.f90  module_calc_wspd.f90  module_date_pack.f90  module_debug.f90  module_interp.f90  module_map_utils.f90  module_pressure.f90  output_module.F90  queue_module.F90  v5d_module.f90  v5df.h  wrf_debug.f90
ARWpost/util/: WRFnc2ctl.f  gribinfo.txt
grib2v5d/2.6/: INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  grib2v5d.spec
grib2v5d/2.6/doc/: Makefile  Makefile.am  Makefile.in
grib2v5d/2.6/examples/: Makefile  Makefile.am  Makefile.in  complete.naml  etaht.naml  hybht.naml  hybhtec.naml  hybhyb.naml  lmsound.naml  lokal.naml  prespres.naml  prespresavn.naml  prespresec.naml  sigmaht.naml
grib2v5d/2.6/src/: Makefile  Makefile.am  Makefile.in  grib2v5d.F90  maketopo.c  sound.f  v5d.c  v5d.h  v5d.incf
grib2v5d/2.6/src/.deps/: binio.Po  maketopo.Po  v5d.Po
grib2v5d/2.6/src/grib_util/: c2agrid.f  findgrib.f  findgribest.f  getinfo.f  getinfo.inc  getinfoest.f  getinfovep.f
grib2v5d/2.6/src/mega/: eladata.f
grib_suite/: bookmarks.html  presentazione.sxi  profile
grib_suite/2.2/config/: make.site
grib_suite/2.2/esempi/: Makefile  Makefile~  esempio.F~  esempio1.F~  esempio2.F~  expansion.es~  getgribnaml.es  grib.grb  tmp.afa  tpsott.ged
grib_suite/2.2/lib/: Makefile  licenza.txt
grib_suite/2.2/ugrib/: .#cong.f.1.15  Makefile  comuni.f  comuni.f.conflitti.new  comuni.f.sav  comuni.h  cong  cong.f  displgrib  displgrib.f  ged.f  gribbo  gribbo.f  menogrib  menogrib.f
grib_suite/config/: make.linux
grib_suite/config/CVS/: Entries
grib_suite/esempi/: esempio  esempio1.F  esempio2.F  esempio3.F  expansion.es  grib.lambo  grib.lokal  tmp_sott.grib
grib_suite/help/: index.html  indice_generale.html
grib_suite/help/generali/: afa.html  cgm.html  cvs.html  f90standard.html  index.html  lynx.html  worldwide_station_list.html
grib_suite/help/idl/: psset.html
grib_suite/help/librerie/: index.html
grib_suite/help/prova/: cluster-representative-member.html  (+3 more)
grib_suite/ugrib/: .#Makefile.1.10  .#Makefile.1.7  .#comuni.f.1.3  .#ged.doc.1.2  Makefile.sav  Makefile.~1.13.~  comuni.f.~1.6.~  comuni.h~  ged  ged.doc  ged.doc.conflitti.new  ged.f.new
h5utils/1.13.1/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure
picogrib/.deps/: dumpgrib.Po  gribex.Po  griblib.Plo  partgrib.Po  pbutils.Plo  setpar.Plo  showgrib.Po
picogrib/.libs/: dumpgrib  gribex  libpicogrib.la  libpicogrib.lai  libpicogrib.so.0.0.0  partgrib  showgrib
picogrib/2.6/: Makefile  Makefile.am  Makefile.in  README.txt  config.h  config.h.in  config.status  configure  configure.ac  constant.h  dumpgrib  dumpgrib.c  gribex  gribex.c  griblib.c  griblib.h  griblib.lo  libpicogrib.la  libtool  partgrib  partgrib.c  pbutils.c  pbutils.lo  picogrib-en.txt  picogrib.spec  setpar.c  setpar.lo  showgrib  showgrib.c  struct.h
readglobe/: LICENSE.TXT  LICENZA.TXT  Makefile  README  readglobe.c  writetopo.c
vis5d/5.2/: Makefile  PORTING  README  README.ps  clone.tcl  highwind.tcl  label.tcl  listfonts  movie.tcl  movie2.tcl  spin.tcl  trajcol.tcl  trajcol2.tcl  wslice.tcl
wrf2vis5d/: Makefile  README  module_wrf_to_v5d_netcdf.F  module_wrf_to_v5d_util_new.F  module_wrf_to_v5d_util_old.F  wrf_to_v5d.F  wrf_v5d_input
(+851 files in other folders)
